--- a/css/styles.css
+++ b/css/styles.css
@@ -45,11 +45,18 @@ nav ul li a{
 }
 
 
-
+.compra a{
+    text-decoration: none;
+    color: #000;
+}
 
 /* main */
  
 /* Productos */
+#destacados{
+    margin: 50px;
+    margin-bottom: 20px;
+}
 .product-stage{
     margin-top: 150px;
     display: flex;
@@ -106,7 +113,9 @@ nav ul li a{
     justify-content: space-between;
     align-items: center;
 }
-
+.container{
+    padding: 25px;
+}
 .col2{
     position: relative;
     flex-basis: 60%;
@@ -134,8 +143,16 @@ nav ul li a{
     /* En construcción el responsive :)*/
 }
 
-
+#items{
+    display: flex;
+    justify-content: space-evenly;
+}
 
 h6{
     color: red;
+}
+
+footer{
+    padding-left: 50px;
+    padding-right: 50px;
 }
